@@ -1,6 +1,9 @@
+2004-04-05  Don Allingham  <dallingham@users.sourceforge.net>
+	* src/VersionControl.py: removed
+
 2004-04-03  Don Allingham  <dallingham@users.sourceforge.net>
-	* GrampsMime.py: added mime types
-	* grampslib_wrap.c: removed
+	* src/GrampsMime.py: added mime types
+	* src/grampslib_wrap.c: removed
 	* various: more undo functionality
 
 2004-03-29  Don Allingham  <dallingham@users.sourceforge.net>
